# cloudflare-dns-updater

./: .gitignore  Cargo.toml  go.mod  go.sum  last_ip  main.go  pyproject.toml
cloudflare-dns-updater/: __init__.py
src/: main.rs
