[tool.poetry]
name = "cloudflare-dns-updater"
version = "0.1.0"
description = ""
authors = ["Renann Prado"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
netifaces = "^0.10.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
